@@ -10,23 +10,16 @@ vim gradle/fork/gradle.user.properties.peb
 ```
 
 ```pebble
-# Project specific configuration
-fileTransfer.user={{user}}
-fileTransfer.password={{password}}
-fileTransfer.domain={{domain}}
-
-# AEM configuration
 notifier.enabled=true
 
-{% if instanceAuthorHttpUrl is not empty %}
+fileTransfer.user={{companyUser}}
+fileTransfer.password={{companyPassword}}
+fileTransfer.domain={{companyDomain}}
+
 instance.local-author.httpUrl={{instanceAuthorHttpUrl}}
 instance.local-author.type={{instanceType}}
-instance.local-author.runModes={{instanceRunModes}}
-instance.local-author.jvmOpts={{instanceJvmOpts}}
-{% endif %}
 
 {% if instanceType == 'local' %}
-localInstance.source={{ localInstanceSource }}
 localInstance.quickstart.jarUrl={{ localInstanceQuickstartJarUri }}
 localInstance.quickstart.licenseUrl={{ localInstanceQuickstartLicenseUri }}
 {% endif %}
@@ -39,47 +32,54 @@ vim gradle/fork/props.gradle.kts
 ```
 
 ```kotlin
-import com.cognifide.gradle.aem.common.instance.local.Source
 import com.neva.gradle.fork.ForkExtension
 
 // this is quirk of Gradle - we cannot access extensions name directly in a applied file
 // in a same way reading in applied file 'the<ForkExtension>().get(propertyName)'
 configure<ForkExtension> {
     properties {
-        define(mapOf(
-                "user" to {
-                    description = "user name"
-                    defaultValue = System.getProperty("user.name")
-                },
-                "password" to {
-                    description = "user password"
-                    password()
-                },
-                "domain" to {
-                    description = "user domain"
-                    optional()
-                },        
-                "instanceAuthorHttpUrl" to {
-                    url("http://localhost:4502")
-                    optional()
-                    description = "URL for accessing AEM author instance"
-                },
+        define("Instance type", mapOf(
                 "instanceType" to {
+                    label = "Type"
                     select("local", "remote")
-                    description = "local - instance will be created on local file system\nremote - connecting to remote instance only"
+                    description = "Local - instance will be created on local file system\nRemote - connecting to remote instance only"
                     controller { toggle(value == "local", "instanceRunModes", "instanceJvmOpts", "localInstance*") }
                 },
-                "instanceRunModes" to { text("local,nosamplecontent") },
-                "instanceJvmOpts" to { text("-server -Xmx2048m -XX:MaxPermSize=512M -Djava.awt.headless=true") },
-                "localInstanceSource" to {
-                    description = "Controls how instances will be created (from scratch, backup or automatically determined)"
-                    select(Source.values().map { it.name.toLowerCase() }, Source.AUTO.name.toLowerCase())
-                },
+                "instanceAuthorHttpUrl" to {
+                    label = "Author HTTP URL"
+                    url("http://localhost:4502")
+                    description = "For accessing AEM author instance (leave empty to do not use it)"
+                }
+        ))
+
+        define("Local instance", mapOf(
                 "localInstanceQuickstartJarUri" to {
-                    description = "Quickstart JAR (cq-quickstart-x.x.x.jar)"
+                    label = "Quickstart URI"
+                    description = "For file named 'cq-quickstart-x.x.x.jar'"
                 },
                 "localInstanceQuickstartLicenseUri" to {
-                    description = "Quickstart license file (license.properties)"
+                    label = "Quickstart License URI"
+                    description = "For file named 'license.properties'"
+                }
+        ))
+
+        define("File transfer", mapOf(
+                "companyUser" to {
+                    label = "User"
+                    description = "Authorized to access AEM files"
+                    defaultValue = System.getProperty("user.name").orEmpty()
+                    optional()
+                },
+                "companyPassword" to {
+                    label = "Password"
+                    description = "For above user"
+                    optional()
+                },
+                "companyDomain" to {
+                    label = "Domain"
+                    description = "Needed only when accessing AEM files over SMB"
+                    defaultValue = System.getenv("USERDOMAIN").orEmpty()
+                    optional()
                 }
         ))
     }
